fix(faq): padding on mobile

--- a/src/styles/pages/faq.css
+++ b/src/styles/pages/faq.css
@@ -161,6 +161,10 @@
 }
 
 @media screen and (max-width: 768px) {
+  .main {
+    padding: 2rem;
+  }
+
   .main__accordion__content h3 {
     text-align: left;
   }
